refactor: Rename TestGetAccounts class to GetAccountsTest

--- a/sfdx-source/main/default/classes/GetAccountsTest.cls
+++ b/sfdx-source/main/default/classes/GetAccountsTest.cls
@@ -1,5 +1,5 @@
 @isTest
-public class TestGetAccounts {
+public class GetAccountsTest {
 
     @isTest static void testGetAccounts() {
         // Setup test data
