refactor: Add comment headers to GetAccounts.cls and TestGetAccounts.cls

--- a/sfdx-source/main/default/classes/GetAccounts.cls
+++ b/sfdx-source/main/default/classes/GetAccounts.cls
@@ -1,4 +1,6 @@
-// A simple Apex class that returns 10 Account records.
+/**
+ * A simple Apex class that returns 10 Account records.
+ */
 public class GetAccounts {
 
     // Get 10 Account records.
